--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -3,7 +3,10 @@ $header-height: 34px;
 $toolbar-height: 40px;
 $formula-height: 24px;
 $info-cell-width: 40px;
+$row-height: 24px;
+$cell-width: 120px;
 
 //colors
 $header-input-clr: #1a73e8;
 $border-color: #c0c0c0;
+$cell-color: #f8f9fa;
