--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,10 +1,11 @@
-// block heights
+// block heights & widths
 $header-height: 34px;
 $toolbar-height: 40px;
 $formula-height: 24px;
 $info-cell-width: 40px;
 $row-height: 24px;
 $cell-width: 120px;
+$db-header-height: 64px;
 
 //colors
 $header-input-clr: #1a73e8;
