--- a/src/scss/table.scss
+++ b/src/scss/table.scss
@@ -17,6 +17,7 @@
   }
 
   .row-info {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,6 +33,7 @@
   }
 
   .column {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -61,6 +63,41 @@
       outline: 2px solid #3c74ff;
       z-index: 2;
 
+    }
+  }
+
+  .col-resize {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    width: 4px;
+    background-color: deepskyblue;
+    opacity: 0;
+    transition: all ease-in .15s;
+
+    &:hover {
+      opacity: 1 !important;
+      transition: all ease-in .15s;
+      cursor: col-resize;
+
+    }
+  }
+
+  .row-resize {
+    position: absolute;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    height: 4px;
+    opacity: 0;
+    background-color: lightseagreen;
+    transition: all ease-in .15s;
+
+    &:hover {
+      opacity: 1;
+      transition: all ease-in .15s;
+      cursor: row-resize;
     }
   }
 }
